<resources>
    <string name="app_name">My Closet</string>
    <string name="AddItem">Add Item</string>
    <string name="colorHint">Select Color(s)</string>
    <string name="seasonsHint">Select Season(s)</string>
    <string name="Login">Login</string>
    <string name="Okay">Okay</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="my_closet">My Closet</string>
    <string name ="typeHint">Enter Clothing Type</string>
    <string name ="styleHint">Select Clothing Style(s)</string>
    <string name="addToFavHint">Add item to favorites</string>
    <string name ="removeFromFavsHint">Remove item from favorites</string>
    <string name ="AddImage">Add Image</string>
    <string name="ItemImageDescription">Item image</string>
    <string name="ItemDetails">Item Details</string>
    <string name="IDtoPass">ID to Pass</string>
    <string-array name="ClothingStyles">
        <item>Formal</item>
        <item>Business Casual</item>
        <item>Athletic</item>
        <item>Casual</item>
    </string-array>
    <string-array name="ClothingType">
        <item>Select Clothing Type</item>
        <item>Top</item>
        <item>Bottom</item>
        <item>Shoe</item>
    </string-array>
    <string-array name="ColorOptions">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Indigo</item>
        <item>Violet</item>
        <item>White</item>
        <item>Black</item>
        <item>Grey</item>
    </string-array>
    <string-array name="Seasons">
        <item>Summer</item>
        <item>Spring</item>
        <item>Winter</item>
        <item>Fall</item>
    </string-array>

</resources>